[gd_scene load_steps=16 format=3 uid="uid://00066s4qg7gm"]

[ext_resource type="Texture2D" uid="uid://br2veu2vvtitf" path="res://Assets/Sprites/block.png" id="1_6bdir"]
[ext_resource type="Script" path="res://Scenes/Objects/block.gd" id="1_ckbak"]
[ext_resource type="Texture2D" uid="uid://bfohmfvf581rs" path="res://Assets/Sprites/block_shadow.png" id="2_0cfx8"]
[ext_resource type="Shader" path="res://Scenes/Objects/solid_color.gdshader" id="2_bbwht"]
[ext_resource type="Shader" path="res://Scenes/Objects/outline.gdshader" id="2_co684"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d7183"]
resource_local_to_scene = true
shader = ExtResource("2_co684")
shader_parameter/color = Color(0.996078, 1, 0.941176, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = true
shader_parameter/add_margins = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_udhfi"]
shader = ExtResource("2_bbwht")
shader_parameter/color = null
shader_parameter/mixture = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jcwje"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_s0hy4"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bjj5r"]
resource_name = "click"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [Vector2(0.9, 0.9)]
}

[sub_resource type="Animation" id="Animation_15vhi"]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_xhuey"]
resource_name = "hover"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_t0uju"]
resource_name = "spawn"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vwrot"]
_data = {
"RESET": SubResource("Animation_s0hy4"),
"click": SubResource("Animation_bjj5r"),
"default": SubResource("Animation_15vhi"),
"hover": SubResource("Animation_xhuey"),
"spawn": SubResource("Animation_t0uju")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iigve"]
size = Vector2(16, 16)

[node name="block" type="Node2D"]
script = ExtResource("1_ckbak")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_d7183")
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("1_6bdir")

[node name="shadow" type="Sprite2D" parent="Sprite2D"]
visible = false
show_behind_parent = true
z_index = -1
material = SubResource("ShaderMaterial_udhfi")
position = Vector2(3, 3)
texture = ExtResource("2_0cfx8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_jcwje")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
libraries = {
"": SubResource("AnimationLibrary_vwrot")
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_iigve")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
